# service-template-python

./: Makefile  README.md  pyproject.toml  service.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
src/: main.py
tests/: basic.py
